--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
