--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "reactstrap": "^9.2.2",
