--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "formik": "^2.4.5",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.3",
@@ -24,7 +26,8 @@
     "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
